Updated domain classes and add delete Product endpoint
Updated domain classes and add delete Product endpoint
ECAT-6